--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,40 +9,68 @@
   <body>
     <header>
       <h1>Mergington High School</h1>
-      <h2>Extracurricular Activities</h2>
+      <h2>Extracurricular Activities Portal</h2>
+      <nav id="nav">
+        <button id="login-btn" class="nav-btn">Login</button>
+        <button id="signup-btn" class="nav-btn">Sign Up</button>
+        <button id="logout-btn" class="nav-btn hidden">Logout</button>
+      </nav>
     </header>
 
     <main>
-      <section id="activities-container">
-        <h3>Available Activities</h3>
-        <div id="activities-list">
-          <!-- Activities will be loaded here -->
-          <p>Loading activities...</p>
-        </div>
-      </section>
+      <div id="auth-container" class="container">
+        <section id="login-section" class="auth-section hidden">
+          <h3>Login</h3>
+          <form id="login-form">
+            <div class="form-group">
+              <label for="login-email">Email:</label>
+              <input type="email" id="login-email" required placeholder="your-email@mergington.edu" />
+            </div>
+            <div class="form-group">
+              <label for="login-password">Password:</label>
+              <input type="password" id="login-password" required />
+            </div>
+            <button type="submit">Login</button>
+          </form>
+        </section>
 
-      <section id="signup-container">
-        <h3>Sign Up for an Activity</h3>
-        <form id="signup-form">
-          <div class="form-group">
-            <label for="email">Student Email:</label>
-            <input type="email" id="email" required placeholder="your-email@mergington.edu" />
+        <section id="signup-section" class="auth-section hidden">
+          <h3>Sign Up</h3>
+          <form id="signup-form">
+            <div class="form-group">
+              <label for="signup-email">Email:</label>
+              <input type="email" id="signup-email" required placeholder="your-email@mergington.edu" />
+            </div>
+            <div class="form-group">
+              <label for="signup-password">Password:</label>
+              <input type="password" id="signup-password" required />
+            </div>
+            <button type="submit">Sign Up</button>
+          </form>
+        </section>
+      </div>
+
+      <div id="dashboard" class="container hidden">
+        <section id="activities-container">
+          <h3>Available Activities</h3>
+          <div id="activities-list" class="activities-grid">
+            <!-- Activities will be loaded here -->
           </div>
-          <div class="form-group">
-            <label for="activity">Select Activity:</label>
-            <select id="activity" required>
-              <option value="">-- Select an activity --</option>
-              <!-- Activity options will be loaded here -->
-            </select>
+        </section>
+
+        <section id="my-activities">
+          <h3>My Activities</h3>
+          <div id="my-activities-list">
+            <!-- User's activities will be loaded here -->
           </div>
-          <button type="submit">Sign Up</button>
-        </form>
-        <div id="message" class="hidden"></div>
-      </section>
+        </section>
+      </div>
+
+      <div id="message" class="message hidden"></div>
     </main>
 
     <footer>
-      <p>&copy; 2023 Mergington High School</p>
+      <p>&copy; 2026 Mergington High School</p>
     </footer>
 
     <script src="app.js"></script>
